--- a/cisoDashboard/frontend/package.json
+++ b/cisoDashboard/frontend/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "reactflow": "^11.11.3",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
@@ -61,6 +62,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:8080"
+  }
 }
