--- a/cisoDashboard/src/main/resources/application.properties
+++ b/cisoDashboard/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.application.name=cisoDashboard
 spring.data.rest.base-path=/api
+spring.datasource.url=jdbc:postgresql://localhost:5432/tfgdashboard
+spring.datasource.username=mosin
+spring.datasource.password=mosin
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
