--- a/cisoDashboard/frontend/package.json
+++ b/cisoDashboard/frontend/package.json
@@ -23,9 +23,11 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.2",
     "@testing-library/user-event": "^14.5.2",
+    "axios": "^1.6.8",
     "bootstrap": "4.5",
     "formik": "^2.4.5",
     "http-proxy-middleware": "^3.0.0",
+    "jwt-decode": "^4.0.0",
     "primereact": "^10.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
