--- a/cisoDashboard/pom.xml
+++ b/cisoDashboard/pom.xml
@@ -43,6 +43,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.nimbusds</groupId>
+			<artifactId>nimbus-jose-jwt</artifactId>
+			<version>8.19</version>
+		</dependency>
 	</dependencies>
 
 	<build>
