--- a/cisoDashboard/frontend/package.json
+++ b/cisoDashboard/frontend/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "4.5",
     "formik": "^2.4.5",
     "http-proxy-middleware": "^3.0.0",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "primereact": "^10.6.4",
     "react": "^18.2.0",
