--- a/cisoDashboard/src/main/resources/application.properties
+++ b/cisoDashboard/src/main/resources/application.properties
@@ -5,4 +5,6 @@ spring.datasource.password=mosin
 jwt.expiration=86400
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.data.mongodb.uri=mongodb://localhost:27017/cisoDashboard
+
 
