--- a/cisoDashboard/src/main/resources/application.properties
+++ b/cisoDashboard/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.jpa.show-sql=true
 spring.data.mongodb.uri=mongodb://localhost:27017/cisoDashboard
 
 
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=200KB
+# Max file size.W
+spring.servlet.multipart.max-file-size=5MB
+# Max Request Size for a multipart/form-data
+spring.servlet.multipart.max-request-size=5MB
