--- a/cisoDashboard/frontend/package.json
+++ b/cisoDashboard/frontend/package.json
@@ -26,8 +26,11 @@
     "axios": "^1.6.8",
     "bootstrap": "4.5",
     "formik": "^2.4.5",
+    "html2canvas": "^1.4.1",
     "http-proxy-middleware": "^3.0.0",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "jwt-decode": "^4.0.0",
     "primereact": "^10.6.4",
     "react": "^18.2.0",
