--- a/cisoDashboard/src/main/resources/application.properties
+++ b/cisoDashboard/src/main/resources/application.properties
@@ -6,7 +6,7 @@ jwt.expiration=86400
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.data.mongodb.uri=mongodb://localhost:27017/cisoDashboard
-
+logging.level.org.springframework.security=DEBUG
 
 spring.servlet.multipart.enabled=true
 # Threshold after which files are written to disk.
