--- a/cisoDashboard/src/main/resources/application.properties
+++ b/cisoDashboard/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=cisoDashboard
 spring.datasource.url=jdbc:postgresql://localhost:5432/tfgdashboard
-spring.datasource.username=mosin
-spring.datasource.password=mosin
+spring.datasource.username=dbuser
+spring.datasource.password=nuf82bf3u2b
 jwt.expiration=86400
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
