--- a/.github/workflows/main_reactfrontdashsecure.yml
+++ b/.github/workflows/main_reactfrontdashsecure.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - reactFrontDashsecure
+name: Build and deploy frontend
 
 on:
   push:
@@ -16,6 +16,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Change directory to cisoDashboard/frontend
+        run: cd cisoDashboard/frontend
+
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
@@ -26,12 +29,13 @@ jobs:
           npm install
           npm run build --if-present
           npm run test --if-present
+        working-directory: ./cisoDashboard/frontend
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: node-app
-          path: .
+          path: ./cisoDashboard/frontend/build
 
   deploy:
     runs-on: ubuntu-latest
@@ -40,20 +44,20 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write # This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
           name: node-app
-      
+
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_06ADFA99A98B456BB345A18143BEA8AC }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_99F919DABAB24E43B33D850472DC7317 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_2642016ADDB74623B648816B4C3B6F43 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v2
@@ -61,5 +65,4 @@ jobs:
         with:
           app-name: 'reactFrontDashsecure'
           slot-name: 'Production'
-          package: .
-          
+          package: ./cisoDashboard/frontend/build
