--- a/.github/workflows/main_reactfrontdashsecure.yml
+++ b/.github/workflows/main_reactfrontdashsecure.yml
@@ -9,6 +9,9 @@ on:
       - main
   workflow_dispatch:
 
+env:
+  CI: false
+
 jobs:
   build:
     runs-on: windows-latest
@@ -27,7 +30,7 @@ jobs:
       - name: npm install, build
         run: |
           npm install
-          CI="" npm run build --if-present
+          npm run build --if-present
         working-directory: ./cisoDashboard/frontend
       
       - name: Upload artifact for deployment job
