--- a/.github/workflows/main_reactdashsecure.yml
+++ b/.github/workflows/main_reactdashsecure.yml
@@ -21,13 +21,14 @@ jobs:
         with:
           node-version: '18.x'
 
-      - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
+      - name: npm install
+        run: npm install
+        working-directory: ./cisoDashboard/frontend
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+      - name: npm build
+        run: npm run build
+        working-directory: ./cisoDashboard/frontend
+
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
