--- a/.github/workflows/main_springdashsecure.yml
+++ b/.github/workflows/main_springdashsecure.yml
@@ -28,8 +28,8 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
-          name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          name: dashsecure-back
+          path: '${{ github.workspace }}/cisoDashboard/target/*.jar'
 
   deploy:
     runs-on: ubuntu-latest
@@ -42,7 +42,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
-          name: java-app
+          name: dashsecure-back
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
