--- a/cisoDashboard/frontend/.env
+++ b/cisoDashboard/frontend/.env
@@ -1,1 +1,1 @@
-DASHSECURE_APP_BACKEND_URL=https://springdashsecure.azurewebsites.net/
+DASHSECURE_APP_BACKEND_URL=https://springdashsecure.azurewebsites.net
